--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@blueprintjs/core": "^1.35.7",
     "async": "^2.6.0",
     "chai": "^4.1.2",
+    "ethers": "^3.0.26",
     "mocha": "^5.0.0",
     "react": "^15.6.2",
     "react-addons-css-transition-group": "^15.6.2",
@@ -63,7 +64,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "create-wallets": "node src/deploy/createWallets.js"
   },
   "jest": {
     "collectCoverageFrom": [
