--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "truffle-solidity-loader": "0.0.8",
     "url-loader": "^1.0.1",
     "webpack": "1.14.0",
-    "webpack-dev-server": "^3.1.5",
+    "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0"
   },
@@ -60,7 +60,8 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-transition-group": "^2.2.1",
-    "truffle-hdwallet-provider": "0.0.3"
+    "truffle-hdwallet-provider": "0.0.3",
+    "web3": "^0.20.7"
   },
   "scripts": {
     "start": "node scripts/start.js",
